--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+#Adding config.py file
+config.py
+#Adding additional files 
+API_practice.ipynb
+random_number.ipynb
+Weatherpy_practice.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
